# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-template-cli
version = 2019.6.25
url = https://github.com/looking-for-a-job/django-template-cli.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django template

[options]
install_requires =
	Django>1.0
	click
	setuptools
scripts =
	scripts/django-template-cli
packages =
	django_template_cli
